--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ i:hover {
 }
 
 /* Responsive layout - makes a one column layout (100%) instead of a two-column layout (50%) */
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .logo {
     margin-left: -40px;
   }
@@ -232,7 +232,7 @@ i:hover {
     margin-left: 30px;
     padding: 7px;
   }
-}
+} */
 @media (max-width: 800px) {
   .info,
   .newsletter {
