--- a/style.css
+++ b/style.css
@@ -148,9 +148,9 @@ main {
   flex: 1 1 17rem;
   margin-left: 50px;
 }
-.elem-1 h1 {
+/* .elem-1 h1 {
   margin-left: -30px;
-}
+} */
 .elem-2,
 .newsletter {
   flex: 1 1 17rem;
